--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
   
   <meta property="og:title" content="My Static Title" />
   <meta property="og:description" content="My Static Description" />
+  <meta property="og:image" content="https://assets-global.website-files.com/61095f46b900fa59f4322389/61097255d5ab76d16c8a3fd7_Web-application-image-p-2600.png" />
 
   <script>
 
@@ -24,6 +25,9 @@
 
     var descmeta = document.querySelector("meta[name='description']")
     descmeta.content = "My Dynamic Description";
+
+    var image = document.querySelector("meta[property='og:image']")
+    image.content = "https://dyer4xa93d5w9.cloudfront.net/fdf85b6e-a120-4954-95d2-4edbf7e2b3c2.gif";
 
   </script>
 
