--- a/index.html
+++ b/index.html
@@ -13,6 +13,8 @@
   <meta property="og:description" content="My Static Description" />
   <meta property="og:image" content="https://assets-global.website-files.com/61095f46b900fa59f4322389/61097255d5ab76d16c8a3fd7_Web-application-image-p-2600.png" />
 
+  <meta name="google-site-verification" content="ex-S_Zd5Qe87evzkxOkmXvfUn26GU48Xyk5nQ9H3XWA" />
+
   <script defer="defer" src="script.js"></script>
 
 
