--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
   <meta name="google-site-verification" content="ex-S_Zd5Qe87evzkxOkmXvfUn26GU48Xyk5nQ9H3XWA" />
 
-  <script defer="defer" src="script.js"></script>
+  <script  src="script.js"></script>
 
 
 
